duniverse/menhirLib.20200211/test/static/bad/ill-sorted-attribute.exp
File "ill-sorted-attribute.mly", line 3, characters 11-14:
Error: does the symbol "FOO" expect 0 or 1 argument?
